<resources>
    <string name="app_name">Android Technical Test</string>

    <string name="pupil_detail_id">Id</string>
    <string name="pupil_detail_name">Name</string>
    <string name="pupil_detail_country">Country</string>
    <string name="sync">Sync</string>
    <string name="reset">Reset</string>

    <string name="data_reset">Api Data Reset</string>
    <string name="data_reset_failed">Data Reset Failed</string>
    <string name="add_pupil_txt">Add pupil</string>
    <string name="back_button">Back button</string>
    <string name="pupil_image">Pupil Image</string>
    <string name="view_location">View Location on map</string>
    <string name="edit_pupil">Edit pupil</string>
    <string name="pupil_country">Pupil country</string>
    <string name="pupil_id">Pupil ID</string>
    <string name="submit">Submit Changes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_location">Save Location</string>
    <string name="latlng">LatLng</string>
    <string name="add_pupil">Create pupil</string>
    <string name="pupil_latlng">Pupil LatLng</string>
    <string name="sync_error_tap_to_retry">Sync error. Tap to retry.</string>
    <string name="syncing">Syncing...</string>

</resources>
