<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_ten"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_5"
            android:clickable="true"
            android:contentDescription="@string/back_button"
            android:focusable="true"
            android:padding="10dp"
            android:paddingStart="2dp"
            android:paddingEnd="5dp"
            android:src="@drawable/ic_back_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pupil_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginEnd="@dimen/dimen_5"
            android:clickable="true"
            android:contentDescription="@string/edit_pupil"
            android:focusable="true"
            android:padding="5dp"
            android:paddingStart="2dp"
            android:paddingEnd="5dp"
            android:src="@drawable/edit_pupil_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_ten"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/margin_ten"
        android:layout_marginBottom="@dimen/margin_ten"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/light_blue_color"
        app:cardCornerRadius="@dimen/margin_twenty"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:id="@+id/artQueueParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/oval_marker"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pupil_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/pupil_image"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedImageView" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_fifteen"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_fifteen"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_ten"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pupil_detail_id"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/pupil_id"
                        style="@style/TextDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="@dimen/text_size_normal"
                        tools:text="123" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_fifteen"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_ten"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pupil_detail_name"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/pupil_name"
                        style="@style/TextDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="@dimen/text_size_normal"
                        tools:text="Abigayle Quigley" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_fifteen"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_ten"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TextDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pupil_detail_country"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/country"
                        style="@style/TextDetail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="@dimen/text_size_normal"
                        tools:text="India" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/locate"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/green_stripe_rounded_button"
            android:paddingStart="@dimen/margin_forty"
            android:paddingEnd="@dimen/margin_forty"
            android:text="@string/view_location"
            android:textAllCaps="false"
            android:textColor="@color/peach_color_text"
            android:textSize="@dimen/small_text_size"
            android:visibility="visible" />

    </RelativeLayout>

</LinearLayout>